--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <p>Meet <a href="#" target="_blank" class="gray-link">Na-i</a>. A dynamic and innovative team of Web Developers and Designer. </p>
         <p>Originally hailing from China, we’ve brought our passion and expertise to the vibrant city of Tokyo, Japan.</p>
         <p>At Na-i, we believe in blending technical prowess with artistic vision to deliver exceptional results for the world. </p>
-        <p class="small-text">© Lu Zhang (Ellie) | eleanorzhang@gmail.com</p>
+        <p class="small-text">© Lu Zhang (Ellie) | eleanorzhang1225@gmail.com</p>
     </div>
 
 
