--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div class="contact">
         <p>LET'S FIND SOME AWESOME WORK</p>
         <p>
-            <a href="#" target="_blank">Person-1</a>
+            <a href="#" target="_blank">XIONG | Kuma Photography</a>
             <a href="#" target="_blank">Person-2</a>
             <a href="#" target="_blank">Person-3</a>
             <a href="#" target="_blank">Person-4</a>
