--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                 <div class="text-content">
                    <h2>ABOUT DAILY LIFE</h2>
                     <p>Every day is an adventure for Gugu, even in the most ordinary moments.</p> 
-                    <p>Sweet home create a warm and inviting atmosphere.</p> 
-                    <p>Gugu's daily life is filled with simple pleasures and quiet joys.</p> 
+                    <p>Sweet home create a warm and inviting atmosphere. Gugu's daily life is filled with simple pleasures and quiet joys.</p> 
                     <p>As they navigate the rhythms of everyday life,</p> 
                     <p>finding delight in the small moments that make each day special.</p>
                 </div>
@@ -179,8 +178,7 @@
             <p>Food is a delight, and Gugu certainly knows how to enjoy it! </p>
             <p>Here, Gugu is seen indulging in some delicious treats. </p>
             <p>With a fox-themed hat adding a playful touch, Gugu is ready to dive into a feast.</p> 
-            <p>The table is set with an assortment of sweets, from creamy chocolates to delicate pastries,</p> 
-            <p>making it a haven for any food lover. Gugu's eyes light up with excitement at the sight of the delectable spread.</p> 
+            <p>The table is set with an assortment of sweets, from creamy chocolates to delicate pastries, making it a haven for any food lover. Gugu's eyes light up with excitement at the sight of the delectable spread.</p> 
             <p>On a culinary adventure, where every meal is a celebration of flavors and every bite is a moment to savor.</p>
             <button class="custom-button fixed-bottom-right">
                 <span class="custom-button-text">Main</span>
