--- a/index.html
+++ b/index.html
@@ -203,13 +203,10 @@
             <h2>Gugu in Daily Life</h2>
             <p>Every day is an adventure for Gugu, even in the most ordinary moments.</p> 
             <p>Gugu is the picture of relaxation and contentment.</p> 
-            <p>Sweet home create a warm and inviting atmosphere,</p> 
-            <p>perfect for unwinding after a busy day.</p> 
-            <p>Whether it's discovering new game worlds, tackling challenging levels,</p> 
-            <p>or simply enjoying some downtime,</p> 
+            <p>Sweet home create a warm and inviting atmosphere,perfect for unwinding after a busy day.</p> 
+            <p>Whether it's discovering new game worlds, tackling challenging levels, or simply enjoying some downtime,</p> 
             <p>Gugu's daily life is filled with simple pleasures and quiet joys.</p> 
-            <p>As they navigate the rhythms of everyday life,</p> 
-            <p>finding delight in the small moments that make each day special.</p>
+            <p>As they navigate the rhythms of everyday life, finding delight in the small moments that make each day special.</p>
             <p>This is the way Gugu embraces the beauty of daily routines and the joy of leisurely pursuits.</p>
             <button class="custom-button fixed-bottom-right">
                 <span class="custom-button-text">Main</span>
@@ -262,14 +259,11 @@
      <div class="content-right">
         <h2>Gugu in Hogwarts</h2>
         <p>Step into the world of magic with Gugu at Hogwarts!</p> 
-        <p>Dressed in a wizard's robe and a charming hat,</p> 
-        <p>Gugu is ready to embark on enchanting adventures within the hallowed halls of the famed school of witchcraft and wizardry.</p> 
-        <p>Surrounded by ancient books and mystical artifacts,</p> 
-        <p>Gugu's curiosity and sense of wonder are palpable.</p> 
+        <p>Dressed in a wizard's robe and a charming hat, Gugu is ready to embark on enchanting adventures within the hallowed halls of the famed school of witchcraft and wizardry.</p> 
+        <p>Surrounded by ancient books and mystical artifacts, Gugu's curiosity and sense of wonder are palpable.</p> 
         <p>Whether brewing potions, learning new spells, or exploring hidden passages,</p> 
         <p>Gugu's days at Hogwarts are filled with excitement and discovery.</p> 
-        <p>This magical journey, where the ordinary transforms into the extraordinary,</p> 
-        <p>and every moment is a spellbinding experience.</p>
+        <p>This magical journey, where the ordinary transforms into the extraordinary, and every moment is a spellbinding experience.</p>
         <button class="custom-button fixed-bottom-right">
             <span class="custom-button-text">Main</span>
         </button>
