--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <p>LET'S FIND SOME AWESOME WORK</p>
         <p>
             <a href="#" target="_blank">XIONG | Kuma Photography</a>
-            <a href="#" target="_blank">Person-2 | Website</a>
+            <a href="#" target="_blank">Kikyo | K_Diary</a>
             <a href="#" target="_blank">Person-3 | Website</a>
             <a href="#" target="_blank">Person-4 | Website</a>
             <a href="#" target="_blank">Person-5 | Website</a>
