--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <p>
             <a href="#" target="_blank">XIONG | Kuma Photography</a>
             <a href="#" target="_blank">Kikyo | K_Diary</a>
-            <a href="#" target="_blank">Person-3 | Website</a>
+            <a href="#" target="_blank">MEI | Utopian</a>
             <a href="#" target="_blank">Person-4 | Website</a>
             <a href="#" target="_blank">Person-5 | Website</a>
             <a href="#" target="_blank">Person-6 | Website</a>
