--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <!--about--> 
 <div class="f-container" id="f-container">
     <div class="description">
-        <p>Meet <a href="#" target="_blank" class="gray-link">Na-i</a>. A dynamic and innovative team of Web Developers and Designer. </p>
+        <p>Meet <a href="https://na-i-project.github.io/Home/" target="_blank" class="gray-link">Na-i</a>. A dynamic and innovative team of Web Developers and Designer. </p>
         <p>Originally hailing from China, we’ve brought our passion and expertise to the vibrant city of Tokyo, Japan.</p>
         <p>At Na-i, we believe in blending technical prowess with artistic vision to deliver exceptional results for the world. </p>
         <p class="small-text">© Lu Zhang (Ellie) | eleanorzhang1225@gmail.com</p>
