--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div class="contact">
         <p>LET'S FIND SOME AWESOME WORK</p>
         <p>
-            <a href="#" target="_blank">XIONG | Kuma Photography</a>
+            <a href="https://kuma53348.github.io/XIONG-Kuma-Photography/" target="_blank">XIONG | Kuma Photography</a>
             <a href="#" target="_blank">Kikyo | K_Diary</a>
             <a href="https://meimeimeimxn.github.io/utopia/" target="_blank">MEI | Utopian</a>
             <a href="https://alfacococo.github.io/alfaco/" target="_blank">Moya | Petals & Tea Whispers</a>
